--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,9 @@ pluginManagement {
         google()
         mavenCentral()
         gradlePluginPortal()
+        maven { url 'https://jitpack.io' }
+        maven { url 'https://dl.google.com/dl/android/maven2/' }
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
     }
 }
 dependencyResolutionManagement {
@@ -10,6 +13,9 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
+        maven { url 'https://dl.google.com/dl/android/maven2/' }
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
     }
 }
 rootProject.name = "LibCool"
