--- a/settings.gradle
+++ b/settings.gradle
@@ -1,23 +1,61 @@
 pluginManagement {
     repositories {
-        google()
-        mavenCentral()
-        gradlePluginPortal()
+        // central仓和jcenter仓的聚合仓
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        // https://repo1.maven.org/maven2/
+        maven { url 'https://maven.aliyun.com/repository/central' }
+        // http://jcenter.bintray.com/
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        // https://maven.google.com/
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        // https://plugins.gradle.org/m2/
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        // http://repo.spring.io/libs-milestone/
+        maven { url 'https://maven.aliyun.com/repository/spring' }
+        // http://repo.spring.io/plugins-release/
+        maven { url 'https://maven.aliyun.com/repository/spring-plugin' }
+        // https://repo.grails.org/grails/core
+        maven { url 'https://maven.aliyun.com/repository/grails-core' }
+        // https://repository.apache.org/snapshots/
+        maven { url 'https://maven.aliyun.com/repository/apache-snapshots' }
+
         maven { url 'https://jitpack.io' }
+        mavenCentral()
         maven { url 'https://dl.google.com/dl/android/maven2/' }
-        maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+        google()
     }
 }
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+
     repositories {
-        google()
-        mavenCentral()
+        // central仓和jcenter仓的聚合仓
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        // https://repo1.maven.org/maven2/
+        maven { url 'https://maven.aliyun.com/repository/central' }
+        // http://jcenter.bintray.com/
+        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+        // https://maven.google.com/
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        // https://plugins.gradle.org/m2/
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        // http://repo.spring.io/libs-milestone/
+        maven { url 'https://maven.aliyun.com/repository/spring' }
+        // http://repo.spring.io/plugins-release/
+        maven { url 'https://maven.aliyun.com/repository/spring-plugin' }
+        // https://repo.grails.org/grails/core
+        maven { url 'https://maven.aliyun.com/repository/grails-core' }
+        // https://repository.apache.org/snapshots/
+        maven { url 'https://maven.aliyun.com/repository/apache-snapshots' }
+
         maven { url 'https://jitpack.io' }
+        mavenCentral()
         maven { url 'https://dl.google.com/dl/android/maven2/' }
-        maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+        google()
     }
 }
+
 rootProject.name = "LibCool"
 include ':app'
 include ':libcool'
