--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+
     implementation project(':libcool')
+//    implementation 'io.github.yfcyfc123234:lib-cool:1.0.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
