--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LibCool">
         <activity
-            android:name=".MainActivity"
+            android:name="com.cool.test.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.LibCool.NoActionBar">
