--- a/settings.gradle
+++ b/settings.gradle
@@ -20,8 +20,9 @@ pluginManagement {
         maven { url 'https://maven.aliyun.com/repository/apache-snapshots' }
 
         maven { url 'https://jitpack.io' }
-        mavenCentral()
+        maven { url 'https://maven.google.com' }
         maven { url 'https://dl.google.com/dl/android/maven2/' }
+        mavenCentral()
         google()
     }
 }
@@ -50,8 +51,9 @@ dependencyResolutionManagement {
         maven { url 'https://maven.aliyun.com/repository/apache-snapshots' }
 
         maven { url 'https://jitpack.io' }
-        mavenCentral()
+        maven { url 'https://maven.google.com' }
         maven { url 'https://dl.google.com/dl/android/maven2/' }
+        mavenCentral()
         google()
     }
 }
